# kubectl-sparql

./: Cargo.toml  README.md
ontology/: main.rdf
src/: cli.yaml  main.rs
src/ontologyreader/: ontologyreader.rs
